--- a/Common reactive.targets
+++ b/Common reactive.targets
@@ -41,6 +41,16 @@
     <BuildTarget>8</BuildTarget>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'DebugWP8|AnyCPU' ">
+    <BuildConfig>Debug</BuildConfig>
+    <BuildTarget>WP8</BuildTarget>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'ReleaseWP8|AnyCPU' ">
+    <BuildConfig>Release</BuildConfig>
+    <BuildTarget>WP8</BuildTarget>
+  </PropertyGroup>
+  
   
   <PropertyGroup Condition=" '$(BuildTarget)' == 'PCL' ">
     <DefineConstants>$(DefineConstants);WP8;NETFX_CORE;PCL</DefineConstants>
@@ -69,7 +79,18 @@
     <BuildFlavor>WINDOWS8</BuildFlavor>
     <DefaultLanguage>en-US</DefaultLanguage>
   </PropertyGroup>
- 
+
+  <PropertyGroup Condition=" '$(BuildTarget)' == 'WP8' ">
+    <DefineConstants>$(DefineConstants);WP8;NETFX_CORE</DefineConstants>
+    <TargetFrameworkIdentifier>WindowsPhone</TargetFrameworkIdentifier>
+    <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
+    <SilverlightVersion>$(TargetFrameworkVersion)</SilverlightVersion>
+    <SilverlightApplication>false</SilverlightApplication>
+    <BuildPlatform>WINDOWS_PHONE</BuildPlatform>
+    <BuildFlavor>WINDOWS_PHONE8</BuildFlavor>
+    <NoStdLib>true</NoStdLib>
+  </PropertyGroup>
+  
   <!--
        ********************
        * GENERAL SETTINGS *
@@ -170,6 +191,21 @@
     </Reference>
     <Reference Include="System.Reactive.PlatformServices">
       <HintPath>..\packages\Rx-PlatformServices.2.2.2\lib\portable-windows8+net45+wp8\System.Reactive.PlatformServices.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup Condition=" '$(BuildTarget)' == 'WP8' ">
+    <Reference Include="System.Reactive.Core">
+      <HintPath>..\packages\Rx-Core.2.2.2\lib\portable-windows8+net45+wp8\System.Reactive.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Reactive.Interfaces">
+      <HintPath>..\packages\Rx-Interfaces.2.2.2\lib\portable-windows8+net45+wp8\System.Reactive.Interfaces.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Reactive.Linq">
+      <HintPath>..\packages\Rx-Linq.2.2.2\lib\portable-windows8+net45+wp8\System.Reactive.Linq.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Reactive.PlatformServices">
+      <HintPath>..\packages\Rx-PlatformServices.2.2.2\lib\windowsphone8\System.Reactive.PlatformServices.dll</HintPath>
     </Reference>
   </ItemGroup>
   
