--- a/Common.targets
+++ b/Common.targets
@@ -18,6 +18,7 @@
     <BuildConfig>Debug</BuildConfig>
     <BuildTarget>PCL</BuildTarget>
   </PropertyGroup>
+  
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'ReleasePCL|AnyCPU' ">
     <BuildConfig>Release</BuildConfig>
     <BuildTarget>PCL</BuildTarget>
@@ -36,20 +37,30 @@
     <BuildConfig>Debug</BuildConfig>
     <BuildTarget>8</BuildTarget>
   </PropertyGroup>
+  
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release8|AnyCPU' ">
     <BuildConfig>Release</BuildConfig>
     <BuildTarget>8</BuildTarget>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'DebugWP8|AnyCPU' ">
+    <BuildConfig>Debug</BuildConfig>
+    <BuildTarget>WP8</BuildTarget>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'ReleaseWP8|AnyCPU' ">
+    <BuildConfig>Release</BuildConfig>
+    <BuildTarget>WP8</BuildTarget>
+  </PropertyGroup>
   
   <PropertyGroup Condition=" '$(BuildTarget)' == 'PCL' ">
-    <DefineConstants>$(DefineConstants);WP8;NETFX_CORE;PCL</DefineConstants>
+    <DefineConstants>$(DefineConstants);NETFX_CORE;PCL</DefineConstants>
     <TargetFrameworkIdentifier>.NETPortable</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <!--<TargetFrameworkProfile>Profile259</TargetFrameworkProfile>-->
     <TargetFrameworkProfile>Profile78</TargetFrameworkProfile>
     <NoStdLib>true</NoStdLib>
-    <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <!--<ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>-->
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(BuildTarget)' == '45' ">
@@ -60,7 +71,7 @@
     <TargetFrameworkProfile />
     <BuildPlatform>DESKTOPCLR</BuildPlatform>
     <BuildFlavor>DESKTOPCLR45</BuildFlavor>
-    <ProjectTypeGuids>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <!--<ProjectTypeGuids>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>-->
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(BuildTarget)' == '8' ">
@@ -71,9 +82,20 @@
     <BuildPlatform>WINDOWS</BuildPlatform>
     <BuildFlavor>WINDOWS8</BuildFlavor>
     <DefaultLanguage>en-US</DefaultLanguage>
-    <ProjectTypeGuids>{BC8A1FFA-BEE3-4634-8014-F334798102B3};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <!--<ProjectTypeGuids>{BC8A1FFA-BEE3-4634-8014-F334798102B3};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>-->
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(BuildTarget)' == 'WP8' ">
+    <DefineConstants>$(DefineConstants);WP8;NETFX_CORE</DefineConstants>
+    <TargetFrameworkIdentifier>WindowsPhone</TargetFrameworkIdentifier>
+    <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
+    <SilverlightVersion>$(TargetFrameworkVersion)</SilverlightVersion>
+    <SilverlightApplication>false</SilverlightApplication>
+    <BuildPlatform>WINDOWS_PHONE</BuildPlatform>
+    <BuildFlavor>WINDOWS_PHONE8</BuildFlavor>
+    <NoStdLib>true</NoStdLib>
+  </PropertyGroup>
+  
   <!--<PropertyGroup Condition=" '$(BuildTarget)' == 'SL5' ">
     <DefineConstants>$(DefineConstants);NO_RXINTERFACES;USE_SL_DISPATCHER;NO_SERIALIZABLE;NO_REMOTING;NO_SEMAPHORE;NO_STOPWATCH;NO_CDS;NO_TASK_DELAY</DefineConstants>
     <TargetFrameworkIdentifier>Silverlight</TargetFrameworkIdentifier>
@@ -92,7 +114,7 @@
    -->
 
   <PropertyGroup>
-    <DefineConstants>$(DefineConstants);$(BuildPlatform);$(BuildFlavor);TRACE</DefineConstants>
+    <DefineConstants>$(DefineConstants);TRACE</DefineConstants>
     <OutputPath>..\..\lib\$(BuildConfig)$(BuildTarget)</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -173,5 +195,11 @@
       <HintPath>..\packages\Microsoft.Bcl.Immutable.1.0.30\lib\portable-net45+win8+wp8\System.Collections.Immutable.dll</HintPath>
     </Reference>    
   </ItemGroup>
- 
+
+  <ItemGroup Condition=" '$(BuildTarget)' == 'WP8' ">
+    <Reference Include="System.Collections.Immutable">
+      <HintPath>..\packages\Microsoft.Bcl.Immutable.1.0.30\lib\portable-net45+win8+wp8\System.Collections.Immutable.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+  
 </Project>
