Get dispatcher on windows phone platform

--- a/Hyperstore.WinPhone8/Hyperstore.Platform.WinPhone8.csproj
+++ b/Hyperstore.WinPhone8/Hyperstore.Platform.WinPhone8.csproj
@@ -83,6 +83,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\AssemblyVersion.cs">
+      <Link>Properties\AssemblyVersion.cs</Link>
+    </Compile>
     <Compile Include="PlatformServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UIDispatcher.cs" />
