--- a/Hyperstore.Platform.Net/Hyperstore.Platform.Net.csproj
+++ b/Hyperstore.Platform.Net/Hyperstore.Platform.Net.csproj
@@ -43,6 +43,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\AssemblyVersion.cs">
+      <Link>Properties\AssemblyVersion.cs</Link>
+    </Compile>
     <Compile Include="Dynamic\DynamicPropertyDescriptor.cs" />
     <Compile Include="Dynamic\DynamicTypeDescriptor.cs" />
     <Compile Include="Dynamic\DynamicTypeDescriptorProvider.cs" />
