--- a/Hyperstore.Platform.WinRT/Hyperstore.Platform.WinRT.csproj
+++ b/Hyperstore.Platform.WinRT/Hyperstore.Platform.WinRT.csproj
@@ -108,6 +108,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\AssemblyVersion.cs">
+      <Link>Properties\AssemblyVersion.cs</Link>
+    </Compile>
     <Compile Include="PlatformServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UIDispatcher.cs" />
