NotifyDataErrors on ModelElement

--- a/Hyperstore/Hyperstore.csproj
+++ b/Hyperstore/Hyperstore.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Container\IEventHandlerMetadata.cs" />
     <Compile Include="Container\IMefContainer.cs" />
     <Compile Include="DomainModel\Impl\CalculatedProperty.cs" />
+    <Compile Include="DomainModel\IDataErrorNotifier.cs" />
     <Compile Include="Platform\IConcurrentDictionary.cs" />
     <Compile Include="Platform\IConcurrentQueue.cs" />
     <Compile Include="Platform\IObjectSerializer.cs" />
