--- a/Hyperstore.Tests/Hyperstore.Tests.csproj
+++ b/Hyperstore.Tests/Hyperstore.Tests.csproj
@@ -37,6 +37,10 @@
     <Optimize>true</Optimize>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Collections.Immutable, Version=1.0.34.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -100,6 +104,8 @@
     <Compile Include="Model\TestBase.cs" />
     <Compile Include="Model\TestDomainModel.cs" />
     <Compile Include="Metadata\PrimitivesTest.cs" />
+    <Compile Include="Persistence\JSonDeserialization.cs" />
+    <Compile Include="Persistence\JSonSerialization.cs" />
     <Compile Include="Persistence\PersistenceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Store\UtilTest.cs" />
@@ -110,6 +116,10 @@
     <None Include="app.config" />
     <None Include="Hyperstore.Tests.licenseheader" />
     <None Include="Key.snk" />
+    <None Include="Model\Library.domain">
+      <Generator>MSBuild:Compile</Generator>
+    </None>
+    <None Include="Model\Library.genmodel" />
     <None Include="Model\Definition.domain">
       <Generator>MSBuild:Compile</Generator>
     </None>
