Remove adapter and partial loading

--- a/Hyperstore/Hyperstore.csproj
+++ b/Hyperstore/Hyperstore.csproj
@@ -65,13 +65,14 @@
     <Compile Include="Container\ICommandInterceptorMetadata.cs" />
     <Compile Include="Container\IEventHandlerMetadata.cs" />
     <Compile Include="Container\IMefContainer.cs" />
+    <Compile Include="DomainModel\IInternalDomainModel.cs" />
     <Compile Include="DomainModel\Impl\CalculatedProperty.cs" />
     <Compile Include="DomainModel\IDataErrorNotifier.cs" />
     <Compile Include="DomainModel\Impl\DomainExtensions.cs" />
-    <Compile Include="DomainModel\Impl\Extension\IExtensionAdapter.cs" />
     <Compile Include="DomainModel\Impl\Extension\IExtensionHypergraph.cs" />
     <Compile Include="DomainModel\Impl\Extension\ISchemaExtension.cs" />
     <Compile Include="DomainModel\Impl\ModelElementEqualityComparer.cs" />
+    <Compile Include="HyperGraph\Impls\INodeInfo.cs" />
     <Compile Include="Metadata\Impl\Primitives\EnumPrimitiveInternal.cs" />
     <Compile Include="Metadata\PropertyKind.cs" />
     <Compile Include="Platform\IConcurrentDictionary.cs" />
@@ -169,7 +170,6 @@
     <Compile Include="Container\Setting.cs" />
     <Compile Include="DomainModel\DomainPersistenceBehavior.cs" />
     <Compile Include="DomainModel\IUpdatableDomainModel.cs" />
-    <Compile Include="Adapters\IGraphAdapter.cs" />
     <Compile Include="DomainModel\ISchemaDefinition.cs" />
     <Compile Include="DomainModel\Impl\Dynamic\DynamicModelElementMetaObject.cs" />
     <Compile Include="DomainModel\Impl\Extension\Controler\DomainInfos.cs" />
@@ -208,21 +208,15 @@
     <Compile Include="Exceptions.cs" />
     <Compile Include="HyperGraph\GraphElementType.cs" />
     <Compile Include="HyperGraph\IEdgeList.cs" />
-    <Compile Include="Adapters\CacheAdapter.cs" />
-    <Compile Include="DomainModel\Impl\Extension\DomainExtensionAdapter.cs" />
     <Compile Include="HyperGraph\IIndex.cs" />
     <Compile Include="HyperGraph\DuplicateIndexException.cs" />
-    <Compile Include="HyperGraph\ICacheAdapter.cs" />
     <Compile Include="Adapters\MemoryGraph\Index\IndexWrapper.cs" />
     <Compile Include="HyperGraph\ITransactionalGraphAdapter.cs" />
     <Compile Include="Adapters\MergeOption.cs" />
-    <Compile Include="Adapters\NodeQueryResult.cs" />
     <Compile Include="HyperGraph\PropertyValue.cs" />
     <Compile Include="HyperGraph\Query.cs" />
     <Compile Include="HyperGraph\UniqueConstraintException.cs" />
-    <Compile Include="Adapters\MemoryGraph\MemoryGraphAdapter.cs" />
     <Compile Include="Adapters\MemoryGraph\MemoryGraphNode.cs" />
-    <Compile Include="Adapters\IQueryGraphAdapter.cs" />
     <Compile Include="Adapters\EntityUpdaters\IPersistenceGraphAdapter.cs" />
     <Compile Include="HyperGraph\Traversal\GraphPath.cs" />
     <Compile Include="HyperGraph\Traversal\GraphPosition.cs" />
