--- a/Hyperstore with reactive.nuspec
+++ b/Hyperstore with reactive.nuspec
@@ -21,7 +21,7 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="..\..\Codeplex\lib\Release\Hyperstore.reactiveextension.dll" target="lib\portable-net45+wp8+win8\Hyperstore.reactiveextension.dll" />
-    <file src="..\..\Codeplex\lib\Release\Hyperstore.reactiveextension.pdb" target="lib\portable-net45+wp8+win8\Hyperstore.reactiveextension.pdb" />
+    <file src="..\..\Hyperstore\lib\Release\Hyperstore.reactiveextension.dll" target="lib\portable-net45+wp8+win8\Hyperstore.reactiveextension.dll" />
+    <file src="..\..\Hyperstore\lib\Release\Hyperstore.reactiveextension.pdb" target="lib\portable-net45+wp8+win8\Hyperstore.reactiveextension.pdb" />
   </files>
 </package>
